Add main functionality of User currency converter app

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/UserCurrencyConverter/App.config
+/UserCurrencyConverter/secret.txt
+/UserCurrencyConverter/Form1.resx
+/UserCurrencyConverter/packages.config
